--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "連動スクワット × トレッドミル週6プログラム",
   "short_name": "連動スクワット",
   "description": "投手のための連動スクワット×トレッドミル・週6プログラム（黒板風UI／オフライン対応）",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#1c3b2a",
   "theme_color": "#1c3b2a",
