--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icons-192.png",
+      "src": "192-icons.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons-512.png",
+      "src": "512-icons.png",
       "sizes": "512x512",
       "type": "image/png"
     }
